Collapse button title text, z-index fix

--- a/src/scss/common/source.scss
+++ b/src/scss/common/source.scss
@@ -5,6 +5,7 @@
   transition: visibility 0.4s, opacity 0.4s ease-in;
   visibility: visible;
   opacity: 1;
+  z-index: 10;
   &.clipboardy-hidden {
     opacity: 0;
     visibility: hidden;
